--- a/style.css
+++ b/style.css
@@ -60,10 +60,82 @@ li a:hover{
     border-radius: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
+    margin-left: 15px;
 }
 
 .btn-1:hover{
 
     background-color: white;
     color: black;
+}
+
+.top-banner{
+
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.2)), url(img/bg-1.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 400px;
+   background-repeat: no-repeat;
+   position: relative;
+   margin-bottom: 80px;
+}
+
+.banner-body{
+    color: white;
+    position: absolute;
+    margin-left: 150px;
+    margin-top: 100px;
+}
+
+.button-1{
+    background-color: #ef233c;
+    color: white;
+    font-weight: 700;
+    text-decoration: none;
+    padding: 15px 30px;
+    border-radius: 7px;
+}
+.banner-body h1{
+    font-size: 40px;
+    font-weight: 700;
+}
+
+.body-1{
+    display: flex;
+    
+    margin: 0 30px;
+    margin-bottom: 50px;
+}
+
+.para-1{
+
+    width: 50%;
+    margin-left: 120px;
+    margin-top: 50px;
+    text-align: justify;
+
+}
+
+
+.para-1 h1{
+    font-size: 50px;
+}
+
+.img-1{
+    width: 50%;
+    margin-left: 150px;
+    margin-right: 40px;
+}
+
+.img-1 img{
+    width: 85%;
+}
+
+.button-2{
+    background-color: #ef233c;
+    color: white;
+    font-weight: 700;
+    text-decoration: none;
+    padding: 15px 30px;
+    border-radius: 7px;
 }
