--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ li a:hover{
 
 
 .para-1 h1{
-    font-size: 50px;
+    font-size: 30px;
 }
 
 .img-1{
@@ -138,4 +138,168 @@ li a:hover{
     text-decoration: none;
     padding: 15px 30px;
     border-radius: 7px;
+}
+
+.button-2:hover{
+    background-color: blueviolet;
+    color: white;
+}
+
+
+.body-2{
+    display: flex;
+    margin-left: 150px;
+    margin-bottom: 90px;
+}
+
+.img-2 img{
+    width: 70%;
+}
+
+.img-2{
+    width: 50%;
+    margin-right: 50px;
+}
+
+.para-2{
+    width: 50%;
+    margin-top: 80px;
+    margin-right: 80px;
+    
+}
+
+.para-2 h1{
+    font-size: 30px;
+}
+
+.para-3{
+    text-align: center;
+    margin-bottom: 50px;
+    
+}
+
+.para-3 h1{
+    font-size: 40px;
+}
+.para-3 p{
+    font-size: 17px;
+}
+
+.container{
+    display: flex;
+    
+    margin-left: 20px;
+    margin-right: 20px;
+    justify-content: center;
+    
+    
+}
+
+
+
+.box-part-1 p{
+    font-size: 13px;
+}
+
+
+
+.container{
+    display: flex;
+    margin-bottom: 30px;
+}
+
+.box-part-1{
+    display: flex;
+    text-align: start;
+    width: 30%;
+    border-radius: 5px;
+    background-color: #f8eff0;
+    height: 200px;
+    
+    
+}
+.pera-p{
+    padding: 40px 20px;
+}
+
+.pera-p h4{
+    padding-bottom: 10px;
+    padding-top: 5px;
+}
+
+
+
+.img-p{
+    padding: 40px 0;
+    padding-left: 30px;
+}
+
+.box-part-2{
+    display: flex;
+    text-align: start;
+   
+    background-color: #f8eff0;
+    width: 30%;
+    border-radius: 5px;
+    height: 200px;
+    margin-left: 30px;
+   
+    
+}
+
+.img-p-2{
+    padding: 40px 0;
+    padding-left: 30px;
+}
+
+.pera-p-2{
+    padding: 40px 20px;
+}
+
+.pera-p-2 h4{
+    padding-bottom: 10px;
+    padding-top: 5px;
+}
+
+.pera-p-2 p{
+    font-size: 12px;
+    font-weight: 100;
+}
+
+.container-2{
+    margin-top: 100px;
+    margin-bottom: 100px;
+    display: flex;
+    justify-content: center;
+}
+
+.pic-1{
+    padding-right: 20px;
+}
+.pic-2{
+    padding-right: 20px;
+}
+
+.para-4{
+    text-align: center;
+}
+
+.para-4 p{
+    font-size: 13px;
+    font-weight: 200;
+    margin-bottom: 100px;
+}
+
+
+.container-3{
+ margin-left: 100px;
+ margin-bottom: 70px;
+}
+
+.part-1{
+    width: 30%;
+    
+   border-style: inset;
+   border-radius: 5px;
+   
 }
